# IncrementalSharpSAT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: alt_component_analyzer.cpp  alt_component_analyzer.h  clause_implication_links.h  component_analyzer.cpp  component_cache-inl.h  component_cache.cpp  component_cache.h  component_management.cpp  component_management.h  instance.cpp  instance.h  main.cpp  new_component_analyzer.cpp  primitive_types.h  solver.cpp  solver.h  solver_config.h  statistics.cpp  statistics.h  structures.h
src/component_types/: base_packed_component.cpp  base_packed_component.h  cacheable_component.h  component.h  component_archetype.h  difference_packed_component.h
tests/: CMakeLists.txt  solver_tests.cpp
tests/resources/: berkeleydb.dimacs  const_grid_64  damageable_by_preprocessing  duplicate_literal  duplicate_literal_in_taut_clause  embtoolkit.dimacs  exp_3  fact  financialServices.dimacs  line_128  log_road_5  min_space_1024  one_clause  overlapping_ternary  php_5  pyramid_10  simple_implication  square_grid_4  taut_clause  xor_tree_7  xor_tree_8
